# translate-gemma-desktop

./: Cargo.toml  LICENSE  README.md  README.zh-Hans.md  build.rs
.github/workflows/: build.yaml  release.yaml
locales/: app.toml
src/: about.rs  assets.rs  config.rs  editor.rs  error.rs  input_editor.rs  language.rs  language_selector.rs  locale_selector.rs  main.rs  menu.rs  ollama_service.rs  output_editor.rs  prompt.rs  status_bar.rs
src/ollama/: mod.rs  ollama.rs
src/ollama/types/: generate.rs  list.rs  mod.rs
